Rerun all flags

--- a/dmu6/dmu6_v_AKARI-SEP/4_flags_akari-sep.ipynb
+++ b/dmu6/dmu6_v_AKARI-SEP/4_flags_akari-sep.ipynb
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "from astropy.table import Table\n",
     "\n",
-    "import itertools"
+    "import itertools\n",
+    "\n",
+    "from herschelhelp_internal.flagging import flag_outliers"
    ]
   },
   {
@@ -136,6 +138,27 @@
    "metadata": {},
    "source": [
     "## 3. Save table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Merge any aperture flags#Merge  \n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_ap_\"):\n",
+    "        try:\n",
+    "            master_catalogue[col.replace(\"_ap_\", \"_\")] = (master_catalogue[col.replace(\"_ap_\", \"_\")] |\n",
+    "                                                          master_catalogue[col])\n",
+    "            master_catalogue.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"{} only has aperture flags.\".format(col))\n",
+    "            master_catalogue.rename_column(col, col.replace(\"_ap_\", \"_\"))"
    ]
   },
   {
