--- a/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
+++ b/dmu6/dmu6_v_COSMOS/4_flags_cosmos.ipynb
@@ -18,7 +18,9 @@
     "import numpy as np\n",
     "from astropy.table import Table, Column\n",
     "\n",
-    "import itertools"
+    "import itertools\n",
+    "\n",
+    "from herschelhelp_internal.flagging import flag_outliers"
    ]
   },
   {
@@ -29,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "SUFFIX = \"20180313\"\n",
+    "SUFFIX = \"20180516\"\n",
     "FIELD = \"COSMOS\"\n",
     "catname = \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX)\n",
     "master_catalogue = Table.read(catname)"
@@ -138,7 +140,7 @@
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "    ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
-    "    flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "    flagcol_ap, flagcol_tot = \"flag_ap_{}\".format(basecol), \"flag_{}\".format(basecol)\n",
     "    \n",
     "    mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
     "    mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
@@ -216,70 +218,6 @@
    "metadata": {},
    "source": [
     "## 2. Outliers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def flag_outliers(x, y, xerr, yerr, flagcol_x, flagcol_y, labels=[\"x\", \"y\"]):\n",
-    "    \n",
-    "    # Add flag columns if does not exist\n",
-    "    if flagcol_x not in master_catalogue.colnames:\n",
-    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol_x))\n",
-    "\n",
-    "    if flagcol_y not in master_catalogue.colnames:\n",
-    "\n",
-    "        master_catalogue.add_column(Column(data=np.zeros(len(master_catalogue), dtype=bool), name=flagcol_y))\n",
-    "    flagx, flagy = master_catalogue[flagcol_x], master_catalogue[flagcol_y]\n",
-    "        \n",
-    "    ## Find outliers  \n",
-    "    # Use only finite values\n",
-    "    mask = np.isfinite(x) & np.isfinite(y) & np.isfinite(xerr) & np.isfinite(yerr)\n",
-    "    x, y = np.copy(x[mask]), np.copy(y[mask])\n",
-    "    xerr, yerr = np.copy(xerr[mask]), np.copy(yerr[mask])\n",
-    "    flagx, flagy = np.copy(flagx[mask]), np.copy(flagy[mask])\n",
-    "    \n",
-    "    # Set the minimum error to 10^-3\n",
-    "    if (len(xerr)!=0 and len(yerr)!=0):\n",
-    "        np.clip(xerr, 5e-3, np.max(xerr), out=xerr)\n",
-    "        np.clip(yerr, 5e-3, np.max(yerr), out=yerr)\n",
-    "\n",
-    "    diff = y - x\n",
-    "    \n",
-    "    x_label, y_label = labels\n",
-    "    \n",
-    "    # If the difference is all NaN there is nothing to compare.\n",
-    "    if np.isnan(diff).all():\n",
-    "        print(\"No sources have both {} and {} values.\".format(\n",
-    "            x_label, y_label))\n",
-    "        print(\"\")\n",
-    "        return\n",
-    "    \n",
-    "    diff_label = \"{} - {}\".format(y_label, x_label)\n",
-    "    print(\"{}:\".format(diff_label))\n",
-    "    \n",
-    "    # Chi2 (Normalized difference)\n",
-    "    ichi2 = np.power(diff, 2) / (np.power(xerr, 2) + np.power(yerr, 2))\n",
-    "    mask2 = ichi2 != 0.0\n",
-    "    diff, ichi2 = np.copy(diff[mask2]), np.copy(ichi2[mask2])\n",
-    "    x, y, xerr, yerr = np.copy(x[mask2]), np.copy(y[mask2]), np.copy(xerr[mask2]), np.copy(yerr[mask2])\n",
-    "\n",
-    "    log_ichi2_25p, log_ichi2_75p = np.percentile(np.log10(ichi2), [25., 75.])\n",
-    "    out_lim = log_ichi2_75p + 3.2*abs(log_ichi2_25p-log_ichi2_75p)\n",
-    "    \n",
-    "    outliers = np.log10(ichi2) > out_lim \n",
-    "    nb_outliers = len(x[outliers])\n",
-    "\n",
-    "    print(\"  Number of outliers: {}\".format(nb_outliers))\n",
-    "    \n",
-    "    \n",
-    "    ## Flag outliers\n",
-    "    flagx[outliers], flagy[outliers] = np.ones(nb_outliers, dtype=bool), np.ones(nb_outliers, dtype=bool)"
    ]
   },
   {
@@ -880,6 +818,27 @@
    "metadata": {},
    "source": [
     "## 3. Save table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Merge any aperture flags#Merge  \n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_ap_\"):\n",
+    "        try:\n",
+    "            master_catalogue[col.replace(\"_ap_\", \"_\")] = (master_catalogue[col.replace(\"_ap_\", \"_\")] |\n",
+    "                                                          master_catalogue[col])\n",
+    "            master_catalogue.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"{} only has aperture flags.\".format(col))\n",
+    "            master_catalogue.rename_column(col, col.replace(\"_ap_\", \"_\"))"
    ]
   },
   {
