--- a/dmu6/dmu6_v_ELAIS-S1/4_flags_elais-s1.ipynb
+++ b/dmu6/dmu6_v_ELAIS-S1/4_flags_elais-s1.ipynb
@@ -201,6 +201,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Merge any aperture flags#Merge  \n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_ap_\"):\n",
+    "        try:\n",
+    "            master_catalogue[col.replace(\"_ap_\", \"_\")] = (master_catalogue[col.replace(\"_ap_\", \"_\")] |\n",
+    "                                                          master_catalogue[col])\n",
+    "            master_catalogue.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"{} only has aperture flags.\".format(col))\n",
+    "            master_catalogue.rename_column(col, col.replace(\"_ap_\", \"_\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
