--- a/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
+++ b/dmu6/dmu6_v_Lockman-SWIRE/4_flags_lockman-swire.ipynb
@@ -137,7 +137,7 @@
     "    basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "    ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
-    "    flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "    flagcol_ap, flagcol_tot = \"flag_ap_{}\".format(basecol), \"flag_{}\".format(basecol)\n",
     "    \n",
     "    mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
     "    mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
@@ -314,6 +314,26 @@
    "metadata": {},
    "source": [
     "## 3. Save table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Merge any aperture flags\n",
+    "for col in master_catalogue.colnames:\n",
+    "    if col.startswith(\"flag_ap_\"):\n",
+    "        try:\n",
+    "            master_catalogue[col.replace(\"_ap_\", \"_\")] = (master_catalogue[col.replace(\"_ap_\", \"_\")] |\n",
+    "                                                          master_catalogue[col])\n",
+    "            master_catalogue.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"{} only has aperture flags.\".format(col))\n",
+    "            master_catalogue.rename_column(col, col.replace(\"_ap_\", \"_\"))"
    ]
   },
   {
