--- a/dmu6/dmu6_v_SGP/4_flags_sgp.ipynb
+++ b/dmu6/dmu6_v_SGP/4_flags_sgp.ipynb
@@ -109,7 +109,7 @@
     "        basecol = band.replace(\" \", \"_\").lower()\n",
     "    \n",
     "        ecol_ap, ecol_tot = \"merr_ap_{}\".format(basecol), \"merr_{}\".format(basecol)\n",
-    "        flagcol_ap, flagcol_tot = \"flag_{}_ap\".format(basecol), \"flag_{}\".format(basecol)\n",
+    "        flagcol_ap, flagcol_tot = \"flag_ap_{}\".format(basecol), \"flag_{}\".format(basecol)\n",
     "    \n",
     "        mask_ap  = np.where(master_catalogue[ecol_ap]  == gpc1_err)[0]\n",
     "        mask_tot = np.where(master_catalogue[ecol_tot] == gpc1_err)[0]\n",
@@ -29108,6 +29108,20 @@
     "    master_catalogue = panstars_loopable(master_catalogue)\n",
     "   # master_catalogue = irac_loopable(master_catalogue)\n",
     "    master_catalogue = outliers_loopable(master_catalogue)\n",
+    "    \n",
+    "    #Merge any aperture flags\n",
+    "    for col in master_catalogue.colnames:\n",
+    "        if col.startswith(\"flag_ap_\"):\n",
+    "            try:\n",
+    "                master_catalogue[col.replace(\"_ap_\", \"_\")] = (master_catalogue[col.replace(\"_ap_\", \"_\")] |\n",
+    "                                                          master_catalogue[col])\n",
+    "                master_catalogue.remove_column(col)\n",
+    "            except KeyError:\n",
+    "                print(\"{} only has aperture flags.\".format(col))\n",
+    "                master_catalogue.rename_column(col, col.replace(\"_ap_\", \"_\"))\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    file_num = tile.split('_')[6].split('.')[0]\n",
     "    \n",
     "    flag_cols = [\"help_id\"]\n",
