--- a/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-09/GAMA-09_catalogue_merging.ipynb
@@ -259,7 +259,7 @@
    "outputs": [],
    "source": [
     "# Flags\n",
-    "flags = Table.read(\"../../dmu6/dmu6_v_GAMA-09/data/gama-12_20180218_flags.fits\")"
+    "flags = Table.read(\"../../dmu6/dmu6_v_GAMA-09/data/gama-09_20171206_flags.fits\")"
    ]
   },
   {
@@ -376,9 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -415,7 +413,7 @@
     "    print(set(merged_table.colnames) - set(columns))\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/GAMA-09_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/GAMA-09_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -530,7 +528,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -582,7 +580,7 @@
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/GAMA-09.fits\")"
+    "    merged_table[columns].write(\"data/GAMA-09_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
