--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -239,6 +239,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Flags\n",
+    "flags = Table.read(\"../../dmu6/dmu6_v_Lockman-SWIRE/data/lockman-swire_20180219_flags.fits\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,6 +330,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in flags.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        try:\n",
+    "            merged_table.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "merged_table = join(merged_table, flags, join_type='left')\n",
+    "# Fill values\n",
+    "for col in merged_table.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -360,10 +395,11 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    print( set(columns) - set(merged_table.colnames))\n",
+    "    print(set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns) )\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/Lockman-SWIRE_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
