--- a/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_AKARI-NEP/AKARI-NEP_catalogue_merging.ipynb
@@ -79,7 +79,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Master list\n",
@@ -241,9 +243,19 @@
    "source": [
     "# Temp spec-z\n",
     "\n",
-    "ml['zspec'].name = 'redshift'\n",
-    "\n",
-    "ml['redshift'][ml['redshift'] < 0] = np.nan  # -99 used for missing values"
+    "ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Flags\n",
+    "flags = Table.read(\"../../dmu6/dmu6_v_AKARI-NEP/data/akari-nep_20180215_flags.fits\")"
    ]
   },
   {
@@ -337,6 +349,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in flags.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        try:\n",
+    "            merged_table.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "merged_table = join(merged_table, flags, join_type='left')\n",
+    "# Fill values\n",
+    "for col in merged_table.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if FIRST_RUN_FOR_CIGALE:\n",
@@ -356,7 +393,7 @@
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
     "    bands.sort(key=lambda x: filter_mean_lambda[x])\n",
     "    \n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', #'redshift', \n",
     "               'zspec']\n",
     "    for band in bands:\n",
     "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
@@ -374,7 +411,7 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/AKARI-NEP_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table[columns].write(\"data/AKARI-NEP_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -539,7 +576,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
    ]
   }
  ],
@@ -559,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
