--- a/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Bootes/Bootes_catalogue_merging.ipynb
@@ -264,6 +264,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Flags\n",
+    "flags = Table.read(\"../../dmu6/dmu6_v_Bootes/data/bootes_20180520_flags.fits\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,6 +363,29 @@
    "outputs": [],
    "source": [
     "merged_table = ml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in flags.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        try:\n",
+    "            merged_table.remove_column(col)\n",
+    "        except KeyError:\n",
+    "            print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "merged_table = join(merged_table, flags, join_type='left')\n",
+    "# Fill values\n",
+    "for col in merged_table.colnames:\n",
+    "    if 'flag' in col:\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -558,7 +593,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\", overwrite=True)"
    ]
   }
  ],
@@ -578,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
